# rust-posts-api

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
api/: .env.example  Cargo.toml
api/src/: context.rs  main.rs
api/src/db/: schema.rs
api/src/db/models/: post.rs
api/src/middlewares/: auth.rs
api/src/resources/: mod.rs
api/src/resources/author/: routes.rs
api/src/resources/post/: routes.rs
api/src/services/: crypto.rs  redis.rs
cli/: .env.example  Cargo.toml
cli/cli/: token.txt
cli/src/: commands.rs  config.rs  main.rs
cli/src/commands/: mod.rs
cli/src/commands/config/: handler.rs
cli/src/commands/post/: handler.rs
cli/src/services/: auth.rs
models/: Cargo.toml
models/migrations/2023-11-13-154640_create_posts/: up.sql
models/migrations/2023-11-14-181128_create_authors/: up.sql
models/src/: lib.rs
models/src/models/: author.rs  post.rs
src/: context.rs  error.rs  main.rs  models.rs  schema.rs
src/db/migrations/2023-11-14-181128_create_authors/: down.sql
src/db/models/: author.rs  post.rs
src/middlewares/: auth.rs
src/resources/: mod.rs
src/resources/author/: routes.rs
src/resources/post/: routes.rs
src/services/: crypto.rs  postgres.rs  redis.rs
