[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
diesel = []


[dependencies]
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# database
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }

# dates and timestamps
chrono = { version = "0.4", features = ["serde"] }
